--- a/storage/pom.xml
+++ b/storage/pom.xml
@@ -11,4 +11,13 @@
         <version>1.1</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.1.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
 </project>
