--- a/commands/pom.xml
+++ b/commands/pom.xml
@@ -2,8 +2,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-
     <artifactId>commands</artifactId>
+    <groupId>ru.rainchat</groupId>
+    <version>1.0</version>
+    <name>commands</name>
+    <url>http://maven.apache.org</url>
+
+    <parent>
+        <groupId>com.rainchat.rlib</groupId>
+        <artifactId>RCore</artifactId>
+        <version>1.1</version>
+    </parent>
+
     <build>
         <plugins>
             <plugin>
@@ -18,10 +28,6 @@
         </plugins>
     </build>
 
-    <parent>
-        <groupId>com.rainchat.rlib</groupId>
-        <artifactId>RCore</artifactId>
-        <version>1.1</version>
-    </parent>
+
 
 </project>
