--- a/Messages/pom.xml
+++ b/Messages/pom.xml
@@ -3,7 +3,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>messages</artifactId>
-    <packaging>jar</packaging>
 
     <parent>
         <groupId>com.rainchat.rlib</groupId>
@@ -16,6 +15,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
                     <source>17</source>
                     <target>17</target>
