--- a/storage/pom.xml
+++ b/storage/pom.xml
@@ -3,15 +3,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>storage</artifactId>
-    <packaging>jar</packaging>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>14</source>
-                    <target>14</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
         </plugins>
