--- a/commands/pom.xml
+++ b/commands/pom.xml
@@ -4,8 +4,8 @@
 
     <artifactId>commands</artifactId>
     <groupId>ru.rainchat</groupId>
-
-
+    <version>1.1</version>
+    
     <name>commands</name>
     <url>http://maven.apache.org</url>
 
