--- a/inventory/pom.xml
+++ b/inventory/pom.xml
@@ -3,7 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>inventory</artifactId>
-    <packaging>jar</packaging>
+    <version>1.1</version>
+
     <build>
         <plugins>
             <plugin>
