--- a/RLib/pom.xml
+++ b/RLib/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>ru.rainchat.rlib</groupId>
         <artifactId>RCore</artifactId>
-        <version>2.0</version>
+        <version>2.1</version>
     </parent>
 
     <build>
@@ -36,31 +36,31 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>commands</artifactId>
             <version>${project.version}</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>inventory</artifactId>
             <version>${project.version}</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>messages</artifactId>
             <version>${project.version}</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>EventManager</artifactId>
             <version>${project.version}</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>me.lucko</groupId>
             <artifactId>jar-relocator</artifactId>
             <version>1.7</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
