--- a/commands/pom.xml
+++ b/commands/pom.xml
@@ -3,6 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>commands</artifactId>
+    <version>2.1</version>
 
     <name>commands</name>
     <url>http://maven.apache.org</url>
