--- a/MenuModule/pom.xml
+++ b/MenuModule/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>MenuModule</artifactId>
-
+    <version>2.1</version>
 
     <name>MenuModule</name>
 
