--- a/RLib/pom.xml
+++ b/RLib/pom.xml
@@ -3,6 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>RLib</artifactId>
+    <version>2.1</version>
 
     <parent>
         <groupId>ru.rainchat.rlib</groupId>
