--- a/storage/pom.xml
+++ b/storage/pom.xml
@@ -3,6 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>storage</artifactId>
+    <version>2.1</version>
 
     <build>
         <plugins>
